# See PEP-517 and PEP-518 for details.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skoltech-lotr"
version = "0.0.1"
description = "Lord of the Rank."
license = {text = "MIT"}
authors = [
    {name = "Daniel Bershatsky", email = "d.bershatsky2@skoltech.ru"},
]
maintainers = [
    {name = "Daniel Bershatsky", email = "d.bershatsky2@skoltech.ru"},
]
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "torch",
    "typing-extensions; python_version<'3.11'",
]
requires-python = ">=3.8,<4"

[project.optional-dependencies]
dev = ["flake8", "isort", "pytest>=7"]
exp = [
    "accelerate",
    "datasets",
    "evaluate",
    "optuna",
    "transformers",
]

[project.urls]
Homepage = "https://doge.skoltech.ru/bershatsky/lotr"
Repository = "https://doge.skoltech.ru/bershatsky/lotr.git"

[tool.isort]

[tool.mypy]
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
show_column_numbers = true
show_error_codes = true
show_error_context = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -m 'not slow'"
testpaths = ["lotr"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
include-package-data = false
platforms = ["Linux"]
zip-safe = true

[tool.setuptools.packages.find]
include = ["lotr*"]
namespaces = false

[tool.setuptools.package-data]
lotr = ["py.typed"]

[tool.yapf]
based_on_style = "pep8"
